k8s/gateway/envoy-config.yaml
apiVersion: v1
kind: ConfigMap

metadata:
  name: envoy-config
  namespace: llm-serving

data:
  envoy.yaml: |
    static_resources:

      listeners:
        - name: llm_gateway_listener

          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080

          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager

                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

                    stat_prefix: llm_gateway

                    codec_type: AUTO

                    route_config:
                      name: llm_routes

                      virtual_hosts:
                        - name: vllm_backend

                          domains:
                            - "*"

                          routes:
                            - match:
                                prefix: "/"

                              route:
                                cluster: vllm_service
                                timeout: 120s

                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: vllm_service

          type: STRICT_DNS

          connect_timeout: 5s

          lb_policy: ROUND_ROBIN

          load_assignment:
            cluster_name: vllm_service

            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: vllm-service
                          port_value: 8000
